Organization show: Changed font size, align in the center all content. Fix responsive. Questions/Ask: Added minimum position at 0.

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7035,7 +7035,7 @@ body {
   .box > .row {
     margin: 0 -0.9375rem; } }
 .box p {
-  font-size: 18px;
+  font-size: 14px;
   line-height: 18px;
   margin-bottom:0.5rem; }
 @media only screen and (max-width: 40em) {
